--- a/index.html
+++ b/index.html
@@ -193,6 +193,16 @@ A Tribute to Dr. APJ Kalam: The Missile Man of India
             <div class="btn">Review Project</div>
         </div>
         <div class="projects-card">
+            <img src="https://qr-code-generator-sigma-nine.vercel.app/" alt="QR-GENERATEOR">
+            
+            <h3>QR Code Generator</h3>
+
+            <p>
+                Text or URL convert into QR Code
+            </p>
+            <div class="btn" href="https://qr-code-generator-sigma-nine.vercel.app/">Review Project</div>
+        </div>
+        <div class="projects-card">
             <img src="GITM-clone.png" alt="gitm">
             
             <h3>College Website Clone</h3>
