--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ A Tribute to Dr. APJ Kalam: The Missile Man of India
             <p>
                 Text or URL convert into QR Code
             </p>
-            <div class="btn" href="https://qr-code-generator-sigma-nine.vercel.app/">Review Project</div>
+            <div class="btn"><a href="https://qr-code-generator-sigma-nine.vercel.app/">Review</a> Project</div>
         </div>
         <div class="projects-card">
             <img src="GITM-clone.png" alt="gitm">
