--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 
 A Tribute to Dr. APJ Kalam: The Missile Man of India
 
-            <div class="btn">Review Project</div>
+            <div class="btn"><a href="https://awadhesh8994.github.io/tribute-kalam/">Review Project</a></div>
         </div>
         <div class="projects-card">
             <img src="ratantata-tribute.jpeg" alt="tata">
