--- a/index.html
+++ b/index.html
@@ -205,16 +205,13 @@ A Tribute to Dr. APJ Kalam: The Missile Man of India
         <div class="projects-card">
             <img src="GITM-clone.png" alt="gitm">
             
-            <h3>College Website Clone</h3>
+            <h3>Basic Calculator</h3>
 
             <p>
-                Goel Institute of Technology and Management,
-
-Located in the heart of Lucknow, Uttar Pradesh, it provides easy accessibility.
-Affiliated to Dr. A.P.J. Abdul Kalam Technical University, Lucknow.
+                It is an basic arithmetic calculator.
 
             </p>
-            <div class="btn">Review Project</div>
+            <div class="btn"><a href="https://awadhesh8994.github.io/basic-calculater/">Review Project</a></div>
         </div>
     </div>
 
