--- a/index.html
+++ b/index.html
@@ -237,6 +237,9 @@ A Tribute to Dr. APJ Kalam: The Missile Man of India
 <!--footer  -->
 <footer class="footer">
     <div class="social-icons">
+        <a href="">
+            <i class="fa-brands fa-github"></i>
+        </a>
         <a href="mailto:awadhesh23th@gmail.com ">
             <i class='bx bxl-gmail' ></i>
         </a>
