--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ A Tribute to Dr. APJ Kalam: The Missile Man of India
 <!--footer  -->
 <footer class="footer">
     <div class="social-icons">
-        <a href="">
+        <a href="https://github.com/awadhesh8994">
             <i class="fa-brands fa-github"></i>
         </a>
         <a href="mailto:awadhesh23th@gmail.com ">
