--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                 I am an aspiring software engineer. Currently purusing Bachelor of Technology in computer science and engineering. I am very passionate about improving my coding skills. Working for myself to improve my skills. Love to explore new fields.
             </p>
             <div class="social-icons">
+                <a href="https://github.com/awadhesh8994">
+            <i class="fa-brands fa-github"></i>
+        </a>
                 <a href="mailto:awadhesh23th@gmail.com">
                     <i class='bx bxl-gmail' ></i>
                 </a>
