--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <h2 class="heading">Projects</h2>
     <div class="projects-box">
         <div class="projects-card">
-            <img src="kalam-tribute.jpg" alt="kalam">
+            <!--<img src="kalam-tribute.jpg" alt="kalam">-->
             
             <h3>Tribute to APJ Kalam</h3>
 
@@ -183,7 +183,7 @@ A Tribute to Dr. APJ Kalam: The Missile Man of India
             <div class="btn"><a href="https://awadhesh8994.github.io/tribute-kalam/">Review Project</a></div>
         </div>
         <div class="projects-card">
-            <img src="ratantata-tribute.jpeg" alt="tata">
+           <!-- <img src="ratantata-tribute.jpeg" alt="tata">-->
             
             <h3>Tribute to Ratan Tata</h3>
 
