--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
         </div>
         <div class="service-box">
             <div class="service-info">
-                <i class='bx bxl-figma' ></i>
-                <h4>FIGMA</h4>
+               <i class="fa-solid fa-database"></i>
+                <h4>SQL</h4>
             </div>
         </div>
     </div>
