--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 I'm a Web Developer
             </h3>
             <p>
-                I am an aspiring software engineer. Currently purusing Bachelor of Technology in computer science and engineering. I am very passionate about improving my coding skills. Working for myself to improve my skills. Love to explore new fields.
+                I am an aspiring software engineer. Currently parsuing Bachelor of Technology in computer science and engineering. I am very passionate about improving my coding skills. Working for myself to improve my skills. Love to explore new fields.
             </p>
             <div class="social-icons">
                 <a href="https://github.com/awadhesh8994">
