--- a/index.html
+++ b/index.html
@@ -166,20 +166,26 @@
         </div>
          <div class="service-box">
             <div class="service-info">
-<!--                <i class="fa-solid fa-database"></i> -->
-                <h4>Next.js</h4>
+                <i class="fa-brands fa-node"></i>
+                <h4>NODE.JS</h4>
+            </div>
+        </div>
+         <div class="service-box">
+            <div class="service-info">
+<!--                <i class="fa-solid fa-database"></i>  -->
+                <h4>MONGODB</h4>
             </div>
         </div>
          <div class="service-box">
             <div class="service-info">
 <!--                <i class="fa-solid fa-database"></i> -->
-                <h4>Mongodb</h4>
+                <h4>EXPRESS.JS</h4>
             </div>
         </div>
          <div class="service-box">
             <div class="service-info">
-<!--                <i class="fa-solid fa-database"></i> -->
-                <h4>Express.js</h4>
+                <i class="fa-brands fa-react"></i>
+                <h4>REACT.JS</h4>
             </div>
         </div>
     </div>
