--- a/index.html
+++ b/index.html
@@ -280,5 +280,11 @@
 </footer>
 
     <script>src="script.js"</script>
+    <footer>
+  <p>Visitors: <span id="visitor-count">Loading...</span></p>
+</footer>
+
+<script src="visitor-counter.js"></script> <!-- Link to JS file -->
+
 </body>
 </html>
