--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
   <p>Visitors: <span id="visitor-count">Loading...</span></p>
 </footer>
 
- <script>src="script.js"</script>
+ <script src="script.js"></script>
 
 </body>
 </html>
