--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
    
     
-<!--   <p>Visitors: <span id="visitor-count">Loading...</span></p> -->
+  <p>Visitors: <span id="visitor-count">Loading...</span></p>
 </footer>
 
  <script src="script.js"></script>
